added animations tothe side bar

--- a/Todo-App/index.html
+++ b/Todo-App/index.html
@@ -48,24 +48,25 @@
     <div class="organize">
       <h2>
         organize your work <br />
-        and  life
+        and life
       </h2>
 
-   <div class="image_container">
-    <img src="images/worklife image.jpg" alt="work image">
-    <img src="images/writing todo.avif" alt="writing">
-   </div>
-   <button id="ascend" class="start_btn">Click to Start Your List</button>
+      <div class="image_container">
+        <img src="images/worklife image.jpg" alt="work image" />
+        <img src="images/writing todo.avif" alt="writing" />
+      </div>
+      <button id="ascend" class="start_btn">Click to Start Your List</button>
     </div>
-
-   
 
     <div class="content_container">
       <aside>
         <ul>
           <li>Today</li>
+          <hr />
           <li>Home</li>
+          <hr />
           <li>My Task</li>
+          <hr />
           <li>Inbox</li>
         </ul>
       </aside>
